[gd_scene load_steps=3 format=3 uid="uid://child_view"]

[ext_resource type="Script" path="res://src/child_mode/child_view.gd" id="1_child"]
[ext_resource type="PackedScene" path="res://src/shared/parent_gate.tscn" id="2_gate"]

[node name="ChildView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_child")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.2, 0.25, 1)

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Center"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="DinoPlaceholder" type="Label" parent="Center/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "ðŸ¦–"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="Center/VBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Hero Mode"
horizontal_alignment = 1

[node name="SwitchToParent" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -150.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 51.0
grow_horizontal = 0
text = "Parent Menu"
flat = true

[node name="ParentGate" parent="." instance=ExtResource("2_gate")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="pressed" from="SwitchToParent" to="." method="_on_switch_to_parent_pressed"]
